sample/error/eval_wdt_int.bfr
codegen [
  $alloc {x} in
  + x x
]